[Fix] 게시글, 댓글 회원 인증관련 수정
게시글, 댓글 회원 인증관련 수정

Issue:none

--- a/back/src/main/resources/static/index.html
+++ b/back/src/main/resources/static/index.html
@@ -7,9 +7,9 @@
 <body>
     로그인 페이지 입니다.<br>
 
-    <a href="http://localhost/oauth2/authorization/kakao">카카오 로그인 </a>
-    <a href="http://localhost/oauth2/authorization/naver">네이버 로그인 </a>
+    <a href="http://192.168.31.160/oauth2/authorization/kakao">카카오 로그인 </a>
+    <a href="http://192.168.31.160/oauth2/authorization/naver">네이버 로그인 </a>
 
-    <a href="http://localhost/member/logout">로그아웃</a>
+    <a href="http://192.168.31.160/member/logout">로그아웃</a>
 </body>
 </html>
