[Feat] 회원 시뮬레이션 기능 날짜변경 기능 개발
회원 시뮬레이션 기능중 날짜 추가 요청이 들어오면 stockdata table의 날짜가 있는지 확인 후 날짜 변경하는 스켈레톤 코드 작성함

Issue:none

--- a/back/src/main/resources/static/index.html
+++ b/back/src/main/resources/static/index.html
@@ -11,5 +11,6 @@
     <a href="http://192.168.31.160/oauth2/authorization/naver">네이버 로그인 </a>
 
     <a href="http://192.168.31.160/member/logout">로그아웃</a>
+    <!-- 2023-02-06 jaeyoon han ci/cd test -->
 </body>
 </html>
