[Refactor] OAuth2.0 배포 테스트
application.yml Oauthprod 부분 수정

Issue:none

--- a/back/src/main/resources/static/index.html
+++ b/back/src/main/resources/static/index.html
@@ -7,10 +7,10 @@
 <body>
     로그인 페이지 입니다.<br>
 
-    <a href="http://192.168.31.160/oauth2/authorization/kakao">카카오 로그인 </a>
-    <a href="http://192.168.31.160/oauth2/authorization/naver">네이버 로그인 </a>
+    <a href="https://i8b111.p.ssafy.io/api/oauth2/authorization/kakao">카카오 로그인 </a>
+    <a href="https://i8b111.p.ssafy.io/api/oauth2/authorization/naver">네이버 로그인 </a>
 
-    <a href="http://192.168.31.160/member/logout">로그아웃</a>
+    <a href="https://i8b111.p.ssafy.io/api/member/logout">로그아웃</a>
     <!-- 2023-02-06 jaeyoon han ci/cd test -->
 </body>
 </html>
