[Fix] 회원 닉네임 정보 기반 회원정보 반환 provider, role 추가

--- a/back/src/main/resources/static/index.html
+++ b/back/src/main/resources/static/index.html
@@ -7,10 +7,10 @@
 <body>
     로그인 페이지 입니다.<br>
 
-    <a href="http://localhost/oauth2/authorization/kakao">카카오 로그인 </a>
-    <a href="http://localhost/oauth2/authorization/naver">네이버 로그인 </a>
+    <a href="http://59.27.27.137:21111/oauth2/authorization/kakao">카카오 로그인 </a>
+    <a href="http://59.27.27.137:21111/authorization/naver">네이버 로그인 </a>
 
-    <a href="http://localhost/member/logout">로그아웃</a>
+    <a href="http://59.27.27.137:21111/member/logout">로그아웃</a>
     <!-- 2023-02-06 jaeyoon han ci/cd test -->
 </body>
 </html>
